=== master

* Deprecate model transaction hook methods (jeremyevans)

* Drop support for pg <0.8.0 in the postgres adapter (jeremyevans)

* Deprecate passing a block to Database#from (jeremyevans)

* Deprecate Sequel::Model::ANONYMOUS_MODEL_CLASSES{,_MUTEX} (jeremyevans)

* Deprecate Sequel.cache_anonymous_models and Sequel.cache_anonymous_models= (jeremyevans)

* Automatically use from_self when using a dataset as part of a compound if it has an offset but no limit (jeremyevans)

* Drop order on existing datasets when using Dataset#union/intersect/except on Microsoft SQL Server unless a limit or offset is used (jeremyevans)

* Deprecate dataset mutation (jeremyevans)

* Handle dumping of autoincrementing 64-bit integer primary key columns correctly when using :same_db option in the schema dumper (jeremyevans) (#1324)

* Add Model.dataset_module_class accessor, allowing plugins to support custom behavior in dataset_module blocks (jeremyevans)

* Make ORDER BY come after UNION/INTERSECT/EXCEPT on Microsoft SQL Server and SQLAnywhere (jeremyevans)

* Make Database#indexes on MySQL handle qualified identifiers (jeremyevans) (#1316)

* Add oracle support to the odbc adapter (samuel02) (#1315)

=== 4.44.0 (2017-03-01)

* Add where_all, where_each, where_single_value model dataset methods, optimized for frozen datasets (jeremyevans)

* Add eager method to dataset_module (jeremyevans)

* Add implicit_subquery extension, for implicitly using a subquery for datasets using raw SQL when calling dataset methods that modify SQL (jeremyevans)

* Make Dataset#from_self keep the columns from the current dataset if present (jeremyevans)

* Add implicit_subquery extension, implicitly using subqueries for dataset methods if the current dataset uses raw SQL (jeremyevans)

* Make SQL::ValueList#inspect show that it is a value list (jeremyevans)

* Make LiteralString#inspect show that it is a literal string (jeremyevans)
