@@ -77,7 +77,7 @@ describe "Sequel::Plugins::TacticalEagerLoading" do
     sql_match('SELECT * FROM t WHERE (t.id = 101) LIMIT 1', 'SELECT * FROM t WHERE (t.id = 102) LIMIT 1')
   end
 
-  it "association getter methods should not eagerly load the association if true is passed" do
+  deprecated "association getter methods should not eagerly load the association if true is passed" do
     ts.map{|x| x.parent(true)}.must_equal [ts[2], ts[3], nil, nil]
     sql_match('SELECT * FROM t WHERE id = 101', 'SELECT * FROM t WHERE id = 102')
   end
